qmltc: Support setting Gradient property of Rectangle

Fixes: QTBUG-102560
Pick-to: 6.3
Change-Id: I7c339d2807a723f38e18e06b944362449d89ad7a
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>