tools/qmltc/qmltccompilerpieces.h
@@ -76,7 +76,8 @@ struct QmltcCodeGenerator
 
     static void generate_assignToProperty(QStringList *block, const QQmlJSScope::ConstPtr &type,
                                           const QQmlJSMetaProperty &p, const QString &value,
-                                          const QString &accessor, bool constructQVariant = false);
+                                          const QString &accessor,
+                                          bool constructFromQObject = false);
     static void generate_setIdValue(QStringList *block, const QString &context, qsizetype index,
                                     const QString &accessor, const QString &idString);
 
