tests/auto/qml/qmltc/data/gradients.qml
@@ -1,0 +1,11 @@
+import QtQuick 2.12
+
+Item
+{
+    Rectangle{
+        gradient: Gradient {
+            GradientStop { position: 0.0; color: "black" }
+            GradientStop { position: 1.0; color: "yellow" }
+        }
+    }
+}
